correction for profile picture stretch

--- a/src/components/photogProfile/photogProfile.scss
+++ b/src/components/photogProfile/photogProfile.scss
@@ -16,6 +16,8 @@
         background-position: 50% 50%;
         background-size: cover;
         background-repeat: no-repeat;
+        object-fit: cover;
+        object-position: center;
     }
 
     .profile-picture.thumbnail {
